Add maven plugin definition.